new proj/src/objects/GE_ES_Sales_Region__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Commercial_Finance_Manager_SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_1Q__c</fullName>
        <description>Operating Plan for Q1 2010</description>
        <label>OP 2010 1Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_2Q__c</fullName>
        <description>Operating Plan for Q2 2010</description>
        <label>OP 2010 2Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_OP_2010_3Q__c</fullName>
        <description>Operating Plan for Q3 2010</description>
        <label>OP 2010 3Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Region</label>
    <listViews>
        <fullName>All_1</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_P_L__c</columns>
        <columns>GE_ES_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>